crates/php-parser/tests/snapshots/integration__no_hang_catch_body.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "TryCatch": {
          "body": [],
          "catches": [
            {
              "types": [
                {
                  "parts": [
                    "Exception"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 20,
                    "end": 30
                  }
                }
              ],
              "var": "e",
              "body": [
                {
                  "kind": {
                    "InlineHtml": " "
                  },
                  "span": {
                    "start": 38,
                    "end": 39
                  }
                },
                {
                  "kind": "Nop",
                  "span": {
                    "start": 45,
                    "end": 46
                  }
                }
              ],
              "span": {
                "start": 19,
                "end": 46
              }
            }
          ],
          "finally": null
        }
      },
      "span": {
        "start": 6,
        "end": 46
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 46
  }
}
