crates/php-parser/tests/snapshots/integration__no_hang_function_body.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "f",
          "params": [],
          "body": [
            {
              "kind": {
                "InlineHtml": " "
              },
              "span": {
                "start": 23,
                "end": 24
              }
            },
            {
              "kind": "Nop",
              "span": {
                "start": 30,
                "end": 31
              }
            }
          ],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 31
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 31
  }
}
